feat:增加接口管理的5个接口显示
