# controller/api_controller.go
@@ -10,6 +10,14 @@ import (
 type ApiController struct{}
 
 // List 记录列表
+// @Summary 获取API接口列表
+// Description: 获取API接口列表
+// @Tags 接口管理
+// @Accept application/json
+// @Produce application/json
+// @Success 200 {object} response.ResponseBody
+// @Router /api/list [get]
+// @Security ApiKeyAuth
 func (m *ApiController) List(c *gin.Context) {
 	req := new(request.ApiListReq)
 	Run(c, req, func() (interface{}, interface{}) {
@@ -18,6 +26,14 @@ func (m *ApiController) List(c *gin.Context) {
 }
 
 // GetTree 接口树
+// @Summary 获取API接口树
+// Description: 获取API接口树
+// @Tags 接口管理
+// @Accept application/json
+// @Produce application/json
+// @Success 200 {object} response.ResponseBody
+// @Router /api/tree [get]
+// @Security ApiKeyAuth
 func (m *ApiController) GetTree(c *gin.Context) {
 	req := new(request.ApiGetTreeReq)
 	Run(c, req, func() (interface{}, interface{}) {
@@ -26,6 +42,15 @@ func (m *ApiController) GetTree(c *gin.Context) {
 }
 
 // Add 新建记录
+// @Summary 新建API接口
+// @Tags 接口管理
+// Description: 新建API接口
+// @Accept application/json
+// @Produce application/json
+// @Param data body request.ApiAddReq true "新建API"
+// @Success 200 {object} response.ResponseBody
+// @Router /api/add [post]
+// @Security ApiKeyAuth
 func (m *ApiController) Add(c *gin.Context) {
 	req := new(request.ApiAddReq)
 	Run(c, req, func() (interface{}, interface{}) {
@@ -34,6 +59,15 @@ func (m *ApiController) Add(c *gin.Context) {
 }
 
 // Update 更新记录
+// @Summary 更新API接口
+// @Tags 接口管理
+// Description: 更新API接口
+// @Accept application/json
+// @Produce application/json
+// @Param data body request.ApiUpdateReq true "更新API"
+// @Success 200 {object} response.ResponseBody
+// @Router /api/update [post]
+// @Security ApiKeyAuth
 func (m *ApiController) Update(c *gin.Context) {
 	req := new(request.ApiUpdateReq)
 	Run(c, req, func() (interface{}, interface{}) {
@@ -42,6 +76,15 @@ func (m *ApiController) Update(c *gin.Context) {
 }
 
 // Delete 删除记录
+// @Summary 删除API接口
+// @Tags 接口管理
+// Description: 删除API接口
+// @Accept application/json
+// @Produce application/json
+// @Param data body request.ApiDeleteReq true "删除API"
+// @Success 200 {object} response.ResponseBody
+// @Router /api/delete [post]
+// @Security ApiKeyAuth
 func (m *ApiController) Delete(c *gin.Context) {
 	req := new(request.ApiDeleteReq)
 	Run(c, req, func() (interface{}, interface{}) {
